--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Hoverboard</title>
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container" id="container"></div>
     <script src="script.js"></script>
 </body>
 </html>
